# holmesgpt

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  ADOPTERS.md  AZURE_MONITOR_SETUP_GUIDE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.local  FEATURES.md  GOVERNANCE.md  HTTP_API.md  INFRAINSIGHTS_TOOLSETS.md  KAFKA_INSTALLATION_GUIDE.md  LICENSE  LICENSE.txt  MAINTAINERS.md  Makefile  README.md  SECURITY.md  alertmanager_tests.sh  avi@robusta.dev_audit_logs.csv  build_with_arm.sh  config.example.yaml  conftest.py  debug_storage_report.py  elastic.py  example_oauth_config.yaml  example_toolset_incluster.yaml  generate_connection_failures.py  generate_connection_failures_az.py  holmes.py  index.html  infrainsights_kubernetes_example.yaml  infrainsights_toolsets.yaml  investigate_cloudwatch_event.sh  (+32 more)
.claude/commands/: create-toolset.md  linting.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  enhancement.yaml
.github/PULL_REQUEST_TEMPLATE/: toolset.md
.github/workflows/: build-and-deploy-docs.yaml  build-and-release.yaml  build-and-test.yaml  build-binaries-and-brew.yaml  build-docker-images.yaml  build-on-publish-release.yaml  build-on-release.yaml  build-template.yaml  docker-build-on-tag.yaml  docker-dev-images.yaml  docker-release-images.yaml  eval-benchmarks.yaml  eval-regression.yaml  llm-evaluation.yaml  publish-pypi.yaml
ai-providers/: index.html
ai-providers/anthropic/: index.html
ai-providers/aws-bedrock/: index.html
ai-providers/azure-openai/: index.html
ai-providers/gemini/: index.html
ai-providers/google-vertex-ai/: index.html
ai-providers/ollama/: index.html
ai-providers/openai/: index.html
ai-providers/openai-compatible/: index.html
ai-providers/other/: index.html
ai-providers/robusta-ai/: index.html
ai-providers/using-multiple-providers/: index.html
api-keys/: index.html
cncf-self-assesment/: index.html
community/: index.html
configuration/: index.html
data-sources/: index.html
data-sources/builtin-toolsets/: index.html
data-sources/custom-toolsets/: index.html
data-sources/permissions/: index.html
data-sources/remote-mcp-servers/: index.html
development/: index.html
development/contributing/: index.html
development/evals/: index.html
development/evaluations/: index.html
development/transformers/: index.html
docs/: .nav.yml  CNAME  README.md  api-keys.md  cncf-self-assesment.md  community.md  custom_fences.py  evals-introduction.md  evals-reporting.md  evals-writing.md  index.md  installation.md  k9s.md  python.md  transformers.md
docs/ai-providers/: .nav.yml  anthropic.md  aws-bedrock.md  azure-openai.md  gemini.md  google-vertex-ai.md  index.md  ollama.md  openai-compatible.md  openai.md  other.md  robusta-ai.md  using-multiple-providers.md
docs/benchmarks/: index.md  latest-results.md
docs/configuration/: index.md
docs/data-sources/: .nav.yml  configuring-toolsets.md  custom-toolsets.md  index.md  permissions.md  remote-mcp-servers.md
docs/development/: .nav.yml  contributing.md  index.md  operator-testing.md  transformers.md
docs/features/: alert-grouping.md
docs/getting-started/: cli-installation.md  first-investigation.md  index.md  kubernetes-installation.md  python-installation.md  ui-installation.md
docs/installation/: .nav.yml  cli-installation.md  first-investigation.md  index.md  kubernetes-installation.md  python-installation.md  ui-installation.md
docs/introduction/: index.md
docs/overrides/: main.html
docs/reference/: .nav.yml  cli-commands.md  environment-variables.md  helm-configuration.md  http-api.md  index.md  (+4 more)
evals-introduction/: index.html
evals-reporting/: index.html
evals-writing/: index.html
examples/: alert_proxy_example.py  azuremonitor_runbooks.yaml  build_docker_image.yaml  checks.yaml  custom_llm.py  custom_runbooks.yaml  custom_toolset.yaml  custom_toolset_jagger.yaml  custom_toolset_jenkinsRunningJobs.yaml  ghcli_toolset.yaml  healthcheck.yaml  helm_dry_run.yaml  load_docker_image.yaml  patch_kubernetes_resource.yaml  rollback_helm_release.yaml  rollback_kubernetes_deployment.yaml  rollout_restart_kubernetes_deployment.yaml  save_docker_image.yaml  scale_kubernetes_deploymen.yaml  tag_docker_image.yaml  uninstall_helm_release.yaml  upgrade_helm_release.yaml
helm/: README.md  upload_chart.sh
holmes/: .git_archival.json  MONGODB_TOOLSET_SETUP.md  REDIS_TOOLSET_SETUP.md  __init__.py  check.py  config.py  config_utils.py  interactive.py  interactive_mode.py  llm_selector.py  main.py  server.py  version.py
installation/: index.html
introduction/: index.html
k9s/: index.html
loki/: docker-compose.yaml
operator/: .dockerignore  Dockerfile  README.md  main.py  requirements.txt
overrides/: main.html
python/: index.html
reference/: index.html
scripts/: delete_operator_crds.sh  generate_eval_report.py  publish-pypi.sh  tempo_cli_README.md  test_alertmanager_proxy.py
search/: search_index.json
stylesheets/: extra.css
test1/: prompt.log.txt
test2/: config.yaml.txt  prompt.txt  runbooks.md
test3/: prompt.txt  runbooks.md
tests/: conftest.py  main.py  mock_dal.py  mock_toolset.py  mock_utils.py  stdio_server.py  test_ai_safety_prompt.py  test_app_imports.py  test_approval_workflow.py  test_ask_holmes_with_tags.py  test_cache.py  test_chat.py  test_chat_using_tags.py  test_check.py  test_check_api.py  test_check_prerequisites.py  test_config.py  test_conversations.py  test_deepeval.py  test_fetch_url.py  test_format_tags.py  test_grafana_common.py  test_grafana_loki.py  test_grafana_tempo.py  test_holmes_sync_toolsets.py  test_interactive.py  test_investigate.py  test_investigate_structured_output.py  test_issue_investigator.py  test_langsmith.py  test_llm.py  test_llm_selector.py  test_load_config.py  test_mcp_toolset.py  test_mocks.py  test_notion.py  test_openai_formatting.py  test_pagerduty.py  test_prometheus.py  test_prometheus_integration.py  (+11 more)
transformers/: index.html
usage/: index.html
using-mock-data/: index.html
walkthrough/: index.html
(+2774 files in other folders)
